fix: react-treebeard issue

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-treebeard",
-  "version": "3.1.0",
+  "name": "po-react-treebeard",
+  "version": "3.1.1",
   "description": "React Tree View Component",
   "main": "index.js",
   "scripts": {
